RESOLVED FIXED174950
Multiple API failures on all testers with URLSchemeHandler and IconLoading
https://bugs.webkit.org/show_bug.cgi?id=174950
Summary Multiple API failures on all testers with URLSchemeHandler and IconLoading
Matt Lewis
Reported 2017-07-28 14:23:04 PDT
After the revision https://trac.webkit.org/changeset/220011/webkit There were multiple failures in API tests for all testers involving these tests: IconLoading.AlreadyCachedIcon IconLoading.DefaultFavicon IconLoading.IconLoadCancelledCallback IconLoading.IconLoadCancelledCallback2 URLSchemeHandler.Basic URLSchemeHandler.Exceptions URLSchemeHandler.NoMIMEType URLSchemeHandler.Redirection Build Results: https://build.webkit.org/builders/Apple%20El%20Capitan%20Release%20WK1%20(Tests)/builds/3595/steps/run-api-tests/logs/stdio https://build.webkit.org/builders/Apple%20El%20Capitan%20Release%20WK1%20(Tests)/builds/3595
Attachments
Patch (6.30 KB, patch)
2017-07-28 15:36 PDT, Brady Eidson
no flags
Brady Eidson
Comment 1 2017-07-28 14:42:49 PDT
These tests are actually completing successfully, then hanging during test tear down.
Brady Eidson
Comment 2 2017-07-28 15:13:03 PDT
A very simple fix makes 7 of these work. Exploring what's up with NoMIMEType now...
Brady Eidson
Comment 3 2017-07-28 15:27:44 PDT
(In reply to Brady Eidson from comment #2) > A very simple fix makes 7 of these work. > > Exploring what's up with NoMIMEType now... Answer - The test is bogus!
Brady Eidson
Comment 4 2017-07-28 15:36:37 PDT
WebKit Commit Bot
Comment 5 2017-07-28 16:19:53 PDT
Comment on attachment 316679 [details] Patch Clearing flags on attachment: 316679 Committed r220033: <http://trac.webkit.org/changeset/220033>
WebKit Commit Bot
Comment 6 2017-07-28 16:19:55 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7 2017-07-28 16:43:47 PDT
Matt Lewis
Comment 8 2017-07-31 10:06:47 PDT
The API test URLSchemeHandler.Exceptions is still failing unexpectedly on Mac Debug testers. Sierra WK2: https://build.webkit.org/builders/Apple%20Sierra%20Debug%20WK2%20%28Tests%29/builds/2281 Sierra WK1: https://build.webkit.org/builders/Apple%20Sierra%20Debug%20WK1%20%28Tests%29/builds/2703 El Capitan WK2: https://build.webkit.org/builders/Apple%20El%20Capitan%20Debug%20WK2%20%28Tests%29/builds/2334 El Capitan WK1: https://build.webkit.org/builders/Apple%20El%20Capitan%20Debug%20WK1%20%28Tests%29/builds/2716 It is flaky on iOS Debug often passing when the test URLSchemeHandler.Leaks1 times out. The error given is: UNEXPECTEDLY EXITED URLSchemeHandler.Exceptions 2017-07-31 06:21:28.036 TestWebKitAPI[59294:40826290] -[NSError init] called; this results in an invalid NSError instance. It will raise an exception in a future release. Please call errorWithDomain:code:userInfo: or initWithDomain:code:userInfo:. This message shown only once.
Matt Lewis
Comment 9 2017-07-31 10:17:05 PDT
After further digging and talking with Brady, the Leaks1 does not look to be related as the test was added after the others. In addition this shows Exception failing when Leaks1 times out: https://build.webkit.org/builders/Apple%20iOS%2010%20Simulator%20Debug%20WK2%20(Tests)/builds/3024
Brady Eidson
Comment 10 2017-07-31 15:50:20 PDT
(In reply to Matt Lewis from comment #8) > The API test URLSchemeHandler.Exceptions is still failing unexpectedly on > Mac Debug testers. > > > The error given is: > UNEXPECTEDLY EXITED URLSchemeHandler.Exceptions > 2017-07-31 06:21:28.036 TestWebKitAPI[59294:40826290] -[NSError init] > called; this results in an invalid NSError instance. It will raise an > exception in a future release. Please call errorWithDomain:code:userInfo: or > initWithDomain:code:userInfo:. This message shown only once. The [NSError init] is (probably) irrelevant. The test is crashing. I installed a fresh install of Sierra 10.12.4 and did a clean debug build of ToT WebKit and cannot reproduce this problem. Could you dig up a crash log? Also, let's move to a new bug - There's absolutely no indication that the bug originally reported here is *not* fixed. The bots are seeing something different.
Note You need to log in before you can comment on or make changes to this bug.